overflow x fixed

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
   height: 100%;
   overflow: auto;
   overscroll-behavior: none;
-  overflow-x: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
